--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary" >
   <mat-toolbar-row>
       <span class="logo-header">Nesland Athletics</span>
+      <span class="spacer"></span>
     <button mat-button>HOME</button>
     <button mat-button>ABOUT</button>
     <button mat-button>GLOVES</button>
